syntax = "proto3";

package model;

import "proto/model/enums.proto";
import "proto/model/location.proto";

option go_package = "github.com/user/repo/proto/model";

// PlayCardPayload 定义了打出卡牌动作所需的数据。
message PlayCardPayload {
  string card_id = 1;
  string target_character_id = 2;
  LocationType target_location = 3;
}

// UseAbilityPayload 定义了使用能力动作所需的数据。
message UseAbilityPayload {
  string character_id = 1;
  string ability_id = 2;
}

// MakeGuessPayload 定义了主角进行最终猜测时提交的数据结构。
message MakeGuessPayload {
  map<int32, PlayerRole> guessed_roles = 1;
}